--- a/public/index.html
+++ b/public/index.html
@@ -1,43 +1,170 @@
+<div id="root"\\></div>
+
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+<html>
+<head>
+<title>React JS: Getting Started</title>
+</head>
+<body>
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+<strong>ITC134 FL 19 3076</strong>
+<p>Informational Website</p>
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+<p>Venus Aoki</p>
+<p>AJ Wietecha</p>
+<p>Kayleah Willes</p>
+<p>Ryan Forest</p>
+<p>Daniel Marcano</p>
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-  </body>
-</html>
+
+
+	<div class="centervideo">
+		<iframe width="560" height="315" src="https://www.youtube.com/embed/Y6aYx_KKM7A" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+
+  <div>
+			<h1><strong> GETTING STARTED: How to Download and Learn REACT</h1>
+      </strong>
+      <p style="background-color:yellow;"> To use React in production, you need NPM and Node.js
+
+To get an overview of what React is, you can write React code directly in HTML.
+
+But in order to use React in production, you need NPM and Node.js installed. </p>
+		
+  <p>
+			Learning how to use React is more simple than you would expect. You can go on Stackblitz
+				and use their open-source, or you can download their App and use that coding. React is a fast thing to
+				learn and has some familiarity with writing codes. React takes anywhere from one month to a year to
+				learn. Great thing about downloading this app is that you can using coding to download it!</p> 
+			
+        <p>React is a declarative, efficient, and flexible JavaScript library for building user
+				interfaces. It lets you compose complex UIs from small and isolated pieces of code called “components”.
+				React has a few different kinds of components, but we'll start with React.Component subclasses: class
+				ShoppingList extends React.</p> 
+      
+        <p>
+				<p style="background-color:Tomato;">
+					<h> When Downloading the REACT it is way simpler than you think. Using a command line, and putting
+						in the command in the terminal will install the APP. If using NPM there is only 3 codes you need
+						to use. </h>
+					<li>1. npm install --save react </li>
+					<li>2. Npm i -S react
+						<i>hence that the abbreviations are just the first letters in Install and Save</i></li>
+					<li>3. var React = require (‘react’) <i>that will access your files to start REACT</i> </li></p> 
+          <h1><strong>React Directly in HTML</strong></h1> 
+
+<p>
+<h>The quickest way start learning React is to write React directly in your HTML files. 
+
+Start by including three scripts, the first two let us write React code in our JavaScripts, and the third, Babel, allows us to write JSX syntax and ES6 in older browsers. 
+
+You will learn more about JSX visiting the React JSX chapter at W3Schools.com</h>
+
+<h1> Setting up a React Environment</h1>
+<p> If you have NPM and Node.js installed, you can create a React application by first installing the create-react-app.
+
+If you've already created the create-react-app you can skip this section.</p>
+
+<p style="background-color:yellow;"><strong>Install create-react-app by running this command in your terminal:</strong></p>
+
+<p style="background-color:yellow;"><strong>C:\Users\Your Name>npm install -g create-react-app</p></strong>
+
+Then you are able to create a React application, let's create one called myfirstreact.
+
+Run this command to create a React application named myfirstreact:
+
+<p style="background-color:yellow;"><strong>C:\Users\Your Name>npx create-react-app myfirstreact</p></strong>
+
+The create-react-app will set up everything you need to run a React application.</p>
+
+
+
+
+ 
+<div>
+  <h1><strong> Getting Started</strong></h1>
+<p>This page is an overview of the React documentation and related resources.</p>
+
+<p>React is a JavaScript library for building user interfaces. Learn what React is all about on our homepage or in the tutorial.</p>
+<ol>
+  <strong><li>Try React</li>
+  <li>Learn React</li>
+  <li>Staying Informed</li>
+  <li>Versioned Documentation</li>
+  <li>Something Missing?</li></strong>
+</ol>
+
+
+<h1>Try React</h1>
+<p> React has been designed from the start for gradual adoption, and you can use as little or as much React as you need. Whether you want to get a taste of React, add some interactivity to a simple HTML page, or start a complex React-powered app, the links in this section will help you get started.</p>
+
+<h1>Online Playgrounds</h1>     
+<p> If you’re interested in playing around with React, you can use an online code playground. Try a Hello World template on CodePen, CodeSandbox, or Glitch.
+If you prefer to use your own text editor, you can also download this HTML file, edit it, and open it from the local filesystem in your browser. It does a slow runtime code transformation, so we’d only recommend using this for simple demos. </p>
+
+<h1> Add React to a Website</h1>
+<p>You can add React to an HTML page in one minute. You can then either gradually expand its presence, or keep it contained to a few dynamic widgets.</p>
+
+<h1> Create a New React App</h1>
+<p>When starting a React project, a simple HTML page with script tags might still be the best option. It only takes a minute to set up!
+
+As your application grows, you might want to consider a more integrated setup. There are several JavaScript toolchains we recommend for larger applications. Each of them can work with little to no configuration and lets you take full advantage of the rich React ecosystem.</p>
+
+<h1>Learn React</h1>
+<p>People come to React from different backgrounds and with different learning styles. Whether you prefer a more theoretical or a practical approach, we hope you’ll find this section helpful.</p>
+
+<p>If you prefer to learn by doing, start with our practical tutorial.
+If you prefer to learn concepts step by step, start with our guide to main concepts.
+Like any unfamiliar technology, React does have a learning curve. With practice and some patience, you will get the hang of it.</p>
+
+<h1>First Examples</h1>
+<p>The React homepage contains a few small React examples with a live editor. Even if you don’t know anything about React yet, try changing their code and see how it affects the result.</p>
+
+<h1>React for Beginners</h1>
+<p>If you feel that the React documentation goes at a faster pace than you’re comfortable with, check out this overview of React by Tania Rascia. It introduces the most important React concepts in a detailed, beginner-friendly way. Once you’re done, give the documentation another try!</p>
+
+<h1>React for Designers</h1>
+<p>If you’re coming from a design background, these resources are a great place to get started.</p>
+
+<h1>JavaScript Resources</h1>
+<p>The React documentation assumes some familiarity with programming in the JavaScript language. You don’t have to be an expert, but it’s harder to learn both React and JavaScript at the same time.</p>
+
+<p>We recommend going through this JavaScript overview to check your knowledge level. It will take you between 30 minutes and an hour but you will feel more confident learning React.</p>
+
+<h1>Tip</h1>
+
+<p>Whenever you get confused by something in JavaScript, MDN and javascript.info are great websites to check. There are also community support forums where you can ask for help.</p>
+
+<h1>Practical Tutorial</h1>
+<p>If you prefer to learn by doing, check out our practical tutorial. In this tutorial, we build a tic-tac-toe game in React. You might be tempted to skip it because you’re not building games — but give it a chance. The techniques you’ll learn in the tutorial are fundamental to building any React apps, and mastering it will give you a much deeper understanding.</p>
+
+<h1>Step-by-Step Guide</h1>
+<p>If you prefer to learn concepts step by step, our guide to main concepts is the best place to start. Every next chapter in it builds on the knowledge introduced in the previous chapters so you won’t miss anything as you go along.</p>              
+
+<h1>Thinking in React</h1>
+<p>Many React users credit reading Thinking in React as the moment React finally “clicked” for them. It’s probably the oldest React walkthrough but it’s still just as relevant.</p>
+
+<h1>Recommended Courses</h1>
+<p>Sometimes people find third-party books and video courses more helpful than the official documentation. We maintain a list of commonly recommended resources, some of which are free.</p>
+
+<h1>Advanced Concepts</h1>
+<p>Once you’re comfortable with the main concepts and played with React a little bit, you might be interested in more advanced topics. This section will introduce you to the powerful, but less commonly used React features like context and refs.</p>
+
+<h1>API Reference</h1>
+<p>This documentation section is useful when you want to learn more details about a particular React API. For example, React.Component API reference can provide you with details on how setState() works, and what different lifecycle methods are useful for.</p>
+
+<h1>Glossary and FAQ</h1>
+<p>The glossary contains an overview of the most common terms you’ll see in the React documentation. There is also a FAQ section dedicated to short questions and answers about common topics, including making AJAX requests, component state, and file structure.</p>
+
+
+<h1>Versioned Documentation</h1>
+<p>This documentation always reflects the latest stable version of React. Since React 16, you can find older versions of the documentation on a separate page. Note that documentation for past versions is snapshotted at the time of the release, and isn’t being continuously updated.</p>
+
+	<div class="centervideo">
+<h1>Getting Started with React - Episode 1</h1>
+<p><iframe width="560" height="315" src="https://www.youtube.com/embed/vTFVg6I2wNI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+
+	</div>
+<h1>References:</h1>
+  <li>(n.d.). Retrieved from https://www.w3schools.com/react/default.asp.</li>
+  <li>Getting Started. (n.d.). Retrieved from https://reactjs.org/docs/getting-started.html.</li>
+
